<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">SaboreAPP</string>
    <string name="opcion">Has seleccionado:</string>
    <string name="widget">widget</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="app_id">1529958383983370</string>
    <string name="next_offer">Oferta Siguiente</string>
    <string name="parse_id_app">9Rr6G9zplmzi8uBV0cvROtrFfrv1C3itUs5DLzIT</string>
    <string name="parse_client_id">JgyWYWBgmXNdXFpc25HlQJZ8ch9dNC9MIyAriTvs</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="logo">Saboreapp Logo</string>
    <string name="asMap">Ver como Mapa</string>
    <string name="asList">Ver como Lista</string>
    <string name="title_activity_mark_info">default name</string>
    <string name="rating">CALIFICACION DE LOS USUARIOS</string>
    <string name="info">Info</string>
    <string name="more_info">Más Información</string>
    <string name="marker_title">default</string>
    <string name="address">Direccion</string>
    <string name="week_hours">Lun-Vie</string>
    <string name="saturday_hours">Sábado</string>
    <string name="sunday_hours">Domingo</string>
    <string name="Schedule">Horarios</string>
    <string name="phone">Teléfono</string>
    <string name="action_favorite">Agregar a favoritos</string>
    <item name="title_activity_mark_info" type="id">default</item>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ratethis">Califica este lugar</string>
    <string name="add_to_fav">Agregar a favoritos</string>
</resources>
