<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.provenlogic1.googlemap_connect.Mark_info"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar android:id="@+id/marker_toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#221a55">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:id="@+id/marker_info"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff"
            android:minLines="3"
            android:textSize="25sp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#32286b"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/rating"
                android:id="@+id/textView2"
                android:textColor="#fff"
                android:textAlignment="center"
                android:layout_marginBottom="5dp" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar"
                android:numStars="5"
                android:stepSize="1"
                android:rating="3"
                android:progressTint="#f4c10a"
                android:progressBackgroundTint="#4e4b3a"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_info"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:background="#020202"
            android:textColor="#fff"
            android:enabled="true" />
    </LinearLayout>

</LinearLayout>
