<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.provenlogic1.googlemap_connect.Marker_info"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar android:id="@+id/marker_toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="#2715d7" app:popupTheme="@style/AppTheme.PopupOverlay"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/marker_title"
            android:focusableInTouchMode="false" >

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#979797">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/ratingBar3"
            android:numStars="5"
            android:stepSize="1"
            android:rating="3"
            android:progressTint="#f4c10a"
            android:progressBackgroundTint="#4e4b3a"
            android:isIndicator="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textView15"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:layout_marginBottom="20dp" />
    </LinearLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#221a55">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:measureWithLargestChild="false" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:id="@+id/textView11"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:layout_span="1"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:layout_column="0" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#332a6c">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info"
                        android:id="@+id/marker_info"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:layout_span="2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:measureWithLargestChild="false">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Schedule"
                        android:id="@+id/textView4"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:layout_span="1"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:layout_column="0" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#302866">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/week_hours"
                        android:id="@+id/textView6"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:padding="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info"
                        android:id="@+id/textView7"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:padding="5dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#312a67">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/saturday_hours"
                        android:id="@+id/textView8"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:padding="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info"
                        android:id="@+id/textView9"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:padding="5dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#302866" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday_hours"
                        android:id="@+id/textView5"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:padding="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info"
                        android:id="@+id/textView10"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:padding="5dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:measureWithLargestChild="false" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:id="@+id/textView3"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:layout_span="1"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:layout_column="0" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#332a6c" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info"
                        android:id="@+id/textView12"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:layout_span="2" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:measureWithLargestChild="false" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView13"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:layout_span="1"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:layout_column="0" />
                </TableRow>

            </TableLayout>

            <TableLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#32286b"
                android:measureWithLargestChild="false"
                android:layout_marginBottom="10dp">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:text="@string/ratethis"
                        android:id="@+id/textView2"
                        android:textColor="#fff"
                        android:textAlignment="inherit"
                        android:layout_weight="1" />

                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:id="@+id/ratingBar"
                        android:numStars="5"
                        android:stepSize="1"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:transformPivotX="0dp"
                        android:rating="3"
                        android:progressTint="#f4c10a"
                        android:progressBackgroundTint="#4e4b3a"
                        android:isIndicator="false"
                        android:layout_gravity="center"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ListView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/listView" />
                </TableRow>

            </TableLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_info"
                android:id="@+id/button3"
                android:layout_gravity="center_horizontal"
                android:background="#020202"
                android:textColor="#fff"
                android:enabled="true" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
